--- a/ideintf/treeviewpropedit.lfm
+++ b/ideintf/treeviewpropedit.lfm
@@ -3,6 +3,7 @@ object TreeViewItemsEditorForm: TTreeViewItemsEditorForm
   Caption = 'TreeView Items Editor'
   ClientHeight = 261
   ClientWidth = 487
+  OnCreate = FormCreate
   PixelsPerInch = 96
   Position = poDesktopCenter
   HorzScrollBar.Page = 486
@@ -11,8 +12,9 @@ object TreeViewItemsEditorForm: TTreeViewItemsEditorForm
   Height = 261
   Top = 194
   Width = 487
-  object Button1: TButton
+  object BtnOK: TButton
     Anchors = [akRight, akBottom]
+    BorderSpacing.InnerBorder = 2
     Caption = 'OK'
     ModalResult = 1
     TabOrder = 0
@@ -21,8 +23,10 @@ object TreeViewItemsEditorForm: TTreeViewItemsEditorForm
     Top = 229
     Width = 75
   end
-  object Button2: TButton
+  object BtnCancel: TButton
     Anchors = [akRight, akBottom]
+    BorderSpacing.InnerBorder = 2
+    Cancel = True
     Caption = 'Cancel'
     ModalResult = 2
     TabOrder = 1
@@ -31,8 +35,9 @@ object TreeViewItemsEditorForm: TTreeViewItemsEditorForm
     Top = 229
     Width = 75
   end
-  object btnApply: TButton
+  object BtnApply: TButton
     Anchors = [akRight, akBottom]
+    BorderSpacing.InnerBorder = 2
     Caption = '&Apply'
     OnClick = btnApplyClick
     TabOrder = 2
@@ -41,8 +46,9 @@ object TreeViewItemsEditorForm: TTreeViewItemsEditorForm
     Top = 229
     Width = 75
   end
-  object Button4: TButton
+  object BtnHelp: TButton
     Anchors = [akRight, akBottom]
+    BorderSpacing.InnerBorder = 2
     Caption = 'Help'
     TabOrder = 3
     Left = 406
@@ -54,70 +60,78 @@ object TreeViewItemsEditorForm: TTreeViewItemsEditorForm
     Anchors = [akTop, akLeft, akRight, akBottom]
     Caption = 'Items'
     ClientHeight = 195
-    ClientWidth = 275
+    ClientWidth = 276
     ParentColor = True
     TabOrder = 4
     Left = 8
     Height = 213
     Top = 8
-    Width = 279
+    Width = 280
     object TreeView1: TTreeView
       Anchors = [akTop, akLeft, akRight, akBottom]
       DefaultItemHeight = 15
+      HideSelection = False
       TabOrder = 0
-      OnClick = TreeView1Click
+      OnSelectionChanged = TreeView1SelectionChanged
+      Options = [tvoAutoItemHeight, tvoKeepCollapsedNodes, tvoShowButtons, tvoShowLines, tvoShowRoot, tvoToolTips]
       Left = 6
       Height = 188
-      Width = 184
+      Width = 185
     end
     object BtnNewItem: TButton
       Anchors = [akTop, akRight]
+      BorderSpacing.InnerBorder = 2
       Caption = '&New Item'
+      Default = True
       OnClick = BtnNewItemClick
       TabOrder = 1
-      Left = 197
+      Left = 198
       Height = 25
       Top = 4
       Width = 75
       Tag = 1
     end
-    object Button6: TButton
+    object BtnNewSubItem: TButton
       Anchors = [akTop, akRight]
+      BorderSpacing.InnerBorder = 2
       Caption = 'N&ew SubItem'
       OnClick = BtnNewItemClick
       TabOrder = 2
-      Left = 197
+      Left = 198
       Height = 25
       Top = 36
       Width = 75
     end
-    object btnDelete: TButton
+    object BtnDelete: TButton
       Anchors = [akTop, akRight]
+      BorderSpacing.InnerBorder = 2
       Caption = '&Delete'
       OnClick = btnDeleteClick
       TabOrder = 3
-      Left = 197
+      Left = 198
       Height = 25
       Top = 70
       Width = 75
     end
-    object btnLoad: TButton
+    object BtnLoad: TButton
       Anchors = [akTop, akRight]
+      BorderSpacing.InnerBorder = 2
       Caption = '&Load'
       OnClick = btnLoadClick
       TabOrder = 4
-      Left = 197
+      Left = 198
       Height = 25
       Top = 102
       Width = 75
     end
-    object btnSave: TButton
+    object BtnSave: TButton
       Anchors = [akTop, akRight]
       BorderSpacing.OnChange = nil
+      BorderSpacing.InnerBorder = 2
       Caption = '&Save'
       OnClick = btnSaveClick
       TabOrder = 5
-      Left = 197
+      Left = 198
       Height = 25
       Top = 136
       Width = 75
@@ -179,7 +193,7 @@ object TreeViewItemsEditorForm: TTreeViewItemsEditorForm
       Width = 91
     end
     object edtIndexImg: TEdit
-      OnChange = Edit1Change
+      OnEditingDone = edtIndexStateEditingDone
       TabOrder = 1
       Left = 86
       Height = 23
@@ -187,7 +201,7 @@ object TreeViewItemsEditorForm: TTreeViewItemsEditorForm
       Width = 48
     end
     object edtIndexSel: TEdit
-      OnChange = Edit1Change
+      OnEditingDone = edtIndexStateEditingDone
       TabOrder = 2
       Left = 86
       Height = 23
@@ -195,7 +209,7 @@ object TreeViewItemsEditorForm: TTreeViewItemsEditorForm
       Width = 48
     end
     object edtIndexState: TEdit
-      OnChange = Edit1Change
+      OnEditingDone = edtIndexStateEditingDone
       TabOrder = 3
       Left = 86
       Height = 23
@@ -204,16 +218,16 @@ object TreeViewItemsEditorForm: TTreeViewItemsEditorForm
     end
   end
   object OpenDialog1: TOpenDialog
-    Title = 'Открыть существующий файл'
+    Title = 'Open'
     FilterIndex = 0
-    Title = 'Открыть существующий файл'
+    Title = 'Open'
     left = 5
     top = 237
   end
   object SaveDialog1: TSaveDialog
-    Title = 'Сохранить файл как'
+    Title = 'Save'
     FilterIndex = 0
-    Title = 'Сохранить файл как'
+    Title = 'Save'
     left = 5
     top = 272
   end
