improved CharacterMap grid instead of synedit and inserting characters directly into the source editor  from Tomas Gregorovic
 SVN 8505@trunk

--- a/ide/charactermapdlg.lfm
+++ b/ide/charactermapdlg.lfm
@@ -1,760 +1,75 @@
 object CharacterMapDialog: TCharacterMapDialog
+  ActiveControl = CloseButton
   Caption = 'CharacterMapDialog'
-  ClientHeight = 405
-  ClientWidth = 412
+  ClientHeight = 397
+  ClientWidth = 360
+  FormStyle = fsStayOnTop
   KeyPreview = True
-  OnCreate = CharacterMapDialogCREATE
-  OnDestroy = CharacterMapDialogDESTROY
-  OnKeyDown = CharacterMapDialogKEYDOWN
-  Position = poscreencenter
-  HorzScrollBar.Page = 413
-  VertScrollBar.Page = 406
-  Left = 379
-  Height = 405
-  Top = 278
-  Width = 412
-  object OkButton: TButton
-    Anchors = [akleft, akbottom]
+  OnCreate = FormCreate
+  OnShow = FormShow
+  PixelsPerInch = 96
+  HorzScrollBar.Page = 359
+  VertScrollBar.Page = 396
+  Left = 528
+  Height = 397
+  Top = 142
+  Width = 360
+  object CloseButton: TButton
+    Anchors = [akBottom]
+    BorderSpacing.Around = 6
+    BorderSpacing.InnerBorder = 2
+    Cancel = True
+    Caption = 'Close'
+    Default = True
     ModalResult = 1
-    Caption = 'Ok'
-    TabStop = True
+    OnClick = CloseButtonClick
     TabOrder = 0
-    Left = 112
+    Left = 142
     Height = 25
-    Top = 374
-    Width = 75
-  end
-  object CancelButton: TButton
-    Anchors = [akleft, akbottom]
-    ModalResult = 2
-    Caption = 'Cancel'
-    TabStop = True
-    TabOrder = 1
-    Left = 224
-    Height = 25
-    Top = 374
+    Top = 368
     Width = 75
   end
   object CharactersGroupbox: TGroupBox
-    Anchors = [aktop, akleft, akright, akbottom]
+    Anchors = [akTop, akLeft, akRight, akBottom]
+    BorderSpacing.Around = 6
     Caption = 'Characters'
-    ClientHeight = 271
-    ClientWidth = 393
-    ParentColor = True
+    ClientHeight = 334
+    ClientWidth = 341
     ParentCtl3D = False
-    TabOrder = 2
+    TabOrder = 1
     Left = 8
-    Height = 288
+    Height = 352
     Top = 8
-    Width = 397
-    object CharMapSynedit: TSynEdit
-      Align = altop
-      Anchors = [aktop, akleft, akright, akbottom]
-      Font.Height = -15
-      Font.Name = 'courier'
-      Height = 248
-      Name = 'CharMapSynedit'
-      ParentCtl3D = False
-      TabOrder = 0
-      Width = 393
-      OnMouseDown = CharMapSyneditMOUSEDOWN
-      OnMouseMove = CharMapSyneditMOUSEMOVE
-      BookMarkOptions.OnChange = nil
-      Gutter.Visible = False
-      Gutter.OnChange = nil
-      Keystrokes = <      
-        item
-          Command = 3
-          ShortCut = 38
-        end      
-        item
-          Command = 103
-          ShortCut = 8230
-        end      
-        item
-          Command = 211
-          ShortCut = 16422
-        end      
-        item
-          Command = 4
-          ShortCut = 40
-        end      
-        item
-          Command = 104
-          ShortCut = 8232
-        end      
-        item
-          Command = 212
-          ShortCut = 16424
-        end      
-        item
-          Command = 1
-          ShortCut = 37
-        end      
-        item
-          Command = 101
-          ShortCut = 8229
-        end      
-        item
-          Command = 5
-          ShortCut = 16421
-        end      
-        item
-          Command = 105
-          ShortCut = 24613
-        end      
-        item
-          Command = 2
-          ShortCut = 39
-        end      
-        item
-          Command = 102
-          ShortCut = 8231
-        end      
-        item
-          Command = 6
-          ShortCut = 16423
-        end      
-        item
-          Command = 106
-          ShortCut = 24615
-        end      
-        item
-          Command = 10
-          ShortCut = 34
-        end      
-        item
-          Command = 110
-          ShortCut = 8226
-        end      
-        item
-          Command = 14
-          ShortCut = 16418
-        end      
-        item
-          Command = 114
-          ShortCut = 24610
-        end      
-        item
-          Command = 9
-          ShortCut = 33
-        end      
-        item
-          Command = 109
-          ShortCut = 8225
-        end      
-        item
-          Command = 13
-          ShortCut = 16417
-        end      
-        item
-          Command = 113
-          ShortCut = 24609
-        end      
-        item
-          Command = 7
-          ShortCut = 36
-        end      
-        item
-          Command = 107
-          ShortCut = 8228
-        end      
-        item
-          Command = 15
-          ShortCut = 16420
-        end      
-        item
-          Command = 115
-          ShortCut = 24612
-        end      
-        item
-          Command = 8
-          ShortCut = 35
-        end      
-        item
-          Command = 108
-          ShortCut = 8227
-        end      
-        item
-          Command = 16
-          ShortCut = 16419
-        end      
-        item
-          Command = 116
-          ShortCut = 24611
-        end      
-        item
-          Command = 223
-          ShortCut = 45
-        end      
-        item
-          Command = 201
-          ShortCut = 16429
-        end      
-        item
-          Command = 604
-          ShortCut = 8237
-        end      
-        item
-          Command = 502
-          ShortCut = 46
-        end      
-        item
-          Command = 603
-          ShortCut = 8238
-        end      
-        item
-          Command = 501
-          ShortCut = 8
-        end      
-        item
-          Command = 501
-          ShortCut = 8200
-        end      
-        item
-          Command = 504
-          ShortCut = 16392
-        end      
-        item
-          Command = 601
-          ShortCut = 32776
-        end      
-        item
-          Command = 602
-          ShortCut = 40968
-        end      
-        item
-          Command = 509
-          ShortCut = 13
-        end      
-        item
-          Command = 199
-          ShortCut = 16449
-        end      
-        item
-          Command = 201
-          ShortCut = 16451
-        end      
-        item
-          Command = 610
-          ShortCut = 24649
-        end      
-        item
-          Command = 509
-          ShortCut = 16461
-        end      
-        item
-          Command = 510
-          ShortCut = 16462
-        end      
-        item
-          Command = 503
-          ShortCut = 16468
-        end      
-        item
-          Command = 611
-          ShortCut = 24661
-        end      
-        item
-          Command = 604
-          ShortCut = 16470
-        end      
-        item
-          Command = 603
-          ShortCut = 16472
-        end      
-        item
-          Command = 507
-          ShortCut = 16473
-        end      
-        item
-          Command = 506
-          ShortCut = 24665
-        end      
-        item
-          Command = 601
-          ShortCut = 16474
-        end      
-        item
-          Command = 602
-          ShortCut = 24666
-        end      
-        item
-          Command = 301
-          ShortCut = 16432
-        end      
-        item
-          Command = 302
-          ShortCut = 16433
-        end      
-        item
-          Command = 303
-          ShortCut = 16434
-        end      
-        item
-          Command = 304
-          ShortCut = 16435
-        end      
-        item
-          Command = 305
-          ShortCut = 16436
-        end      
-        item
-          Command = 306
-          ShortCut = 16437
-        end      
-        item
-          Command = 307
-          ShortCut = 16438
-        end      
-        item
-          Command = 308
-          ShortCut = 16439
-        end      
-        item
-          Command = 309
-          ShortCut = 16440
-        end      
-        item
-          Command = 310
-          ShortCut = 16441
-        end      
-        item
-          Command = 351
-          ShortCut = 24624
-        end      
-        item
-          Command = 352
-          ShortCut = 24625
-        end      
-        item
-          Command = 353
-          ShortCut = 24626
-        end      
-        item
-          Command = 354
-          ShortCut = 24627
-        end      
-        item
-          Command = 355
-          ShortCut = 24628
-        end      
-        item
-          Command = 356
-          ShortCut = 24629
-        end      
-        item
-          Command = 357
-          ShortCut = 24630
-        end      
-        item
-          Command = 358
-          ShortCut = 24631
-        end      
-        item
-          Command = 359
-          ShortCut = 24632
-        end      
-        item
-          Command = 360
-          ShortCut = 24633
-        end      
-        item
-          Command = 231
-          ShortCut = 24654
-        end      
-        item
-          Command = 232
-          ShortCut = 24643
-        end      
-        item
-          Command = 233
-          ShortCut = 24652
-        end      
-        item
-          Command = 612
-          ShortCut = 9
-        end      
-        item
-          Command = 613
-          ShortCut = 8201
-        end      
-        item
-          Command = 250
-          ShortCut = 24642
-        end>
-      Lines.Strings = (
-        'CharMapSynedit'
-      )
-      Options = [eoautoindent, eonocaret, eonoselection, eoscrollpasteol, eoshowscrollhint, eosmarttabs, eotabstospaces, eotrimtrailingspaces]
-      ReadOnly = True
-      SelectedColor.OnChange = nil
-      Cursor = 65532
-      Height = 248
-      Width = 393
-    end
+    Width = 345
     object CharInfoLabel: TLabel
-      Align = albottom
-      Anchors = [akleft, akright, akbottom]
+      Align = alBottom
+      BorderSpacing.Around = 6
       Caption = 'CharInfoLabel'
-      Layout = tltop
-      Height = 20
-      Top = 251
-      Width = 393
+      Color = clNone
+      ParentColor = False
+      Left = 6
+      Height = 14
+      Top = 314
+      Width = 329
     end
-  end
-  object TextGroupbox: TGroupBox
-    Anchors = [akleft, akright, akbottom]
-    Caption = 'Text'
-    ClientHeight = 53
-    ClientWidth = 393
-    ParentColor = True
-    ParentCtl3D = False
-    TabOrder = 3
-    Left = 8
-    Height = 70
-    Top = 296
-    Width = 397
-    object TextSynedit: TSynEdit
-      Align = alclient
-      Font.Height = -15
-      Font.Name = 'courier'
-      Height = 53
-      Name = 'TextSynedit'
-      ParentCtl3D = False
-      TabOrder = 0
-      Width = 393
-      BookMarkOptions.OnChange = nil
-      Gutter.Visible = False
-      Gutter.OnChange = nil
-      Keystrokes = <      
-        item
-          Command = 3
-          ShortCut = 38
-        end      
-        item
-          Command = 103
-          ShortCut = 8230
-        end      
-        item
-          Command = 211
-          ShortCut = 16422
-        end      
-        item
-          Command = 4
-          ShortCut = 40
-        end      
-        item
-          Command = 104
-          ShortCut = 8232
-        end      
-        item
-          Command = 212
-          ShortCut = 16424
-        end      
-        item
-          Command = 1
-          ShortCut = 37
-        end      
-        item
-          Command = 101
-          ShortCut = 8229
-        end      
-        item
-          Command = 5
-          ShortCut = 16421
-        end      
-        item
-          Command = 105
-          ShortCut = 24613
-        end      
-        item
-          Command = 2
-          ShortCut = 39
-        end      
-        item
-          Command = 102
-          ShortCut = 8231
-        end      
-        item
-          Command = 6
-          ShortCut = 16423
-        end      
-        item
-          Command = 106
-          ShortCut = 24615
-        end      
-        item
-          Command = 10
-          ShortCut = 34
-        end      
-        item
-          Command = 110
-          ShortCut = 8226
-        end      
-        item
-          Command = 14
-          ShortCut = 16418
-        end      
-        item
-          Command = 114
-          ShortCut = 24610
-        end      
-        item
-          Command = 9
-          ShortCut = 33
-        end      
-        item
-          Command = 109
-          ShortCut = 8225
-        end      
-        item
-          Command = 13
-          ShortCut = 16417
-        end      
-        item
-          Command = 113
-          ShortCut = 24609
-        end      
-        item
-          Command = 7
-          ShortCut = 36
-        end      
-        item
-          Command = 107
-          ShortCut = 8228
-        end      
-        item
-          Command = 15
-          ShortCut = 16420
-        end      
-        item
-          Command = 115
-          ShortCut = 24612
-        end      
-        item
-          Command = 8
-          ShortCut = 35
-        end      
-        item
-          Command = 108
-          ShortCut = 8227
-        end      
-        item
-          Command = 16
-          ShortCut = 16419
-        end      
-        item
-          Command = 116
-          ShortCut = 24611
-        end      
-        item
-          Command = 223
-          ShortCut = 45
-        end      
-        item
-          Command = 201
-          ShortCut = 16429
-        end      
-        item
-          Command = 604
-          ShortCut = 8237
-        end      
-        item
-          Command = 502
-          ShortCut = 46
-        end      
-        item
-          Command = 603
-          ShortCut = 8238
-        end      
-        item
-          Command = 501
-          ShortCut = 8
-        end      
-        item
-          Command = 501
-          ShortCut = 8200
-        end      
-        item
-          Command = 504
-          ShortCut = 16392
-        end      
-        item
-          Command = 601
-          ShortCut = 32776
-        end      
-        item
-          Command = 602
-          ShortCut = 40968
-        end      
-        item
-          Command = 509
-          ShortCut = 13
-        end      
-        item
-          Command = 199
-          ShortCut = 16449
-        end      
-        item
-          Command = 201
-          ShortCut = 16451
-        end      
-        item
-          Command = 610
-          ShortCut = 24649
-        end      
-        item
-          Command = 509
-          ShortCut = 16461
-        end      
-        item
-          Command = 510
-          ShortCut = 16462
-        end      
-        item
-          Command = 503
-          ShortCut = 16468
-        end      
-        item
-          Command = 611
-          ShortCut = 24661
-        end      
-        item
-          Command = 604
-          ShortCut = 16470
-        end      
-        item
-          Command = 603
-          ShortCut = 16472
-        end      
-        item
-          Command = 507
-          ShortCut = 16473
-        end      
-        item
-          Command = 506
-          ShortCut = 24665
-        end      
-        item
-          Command = 601
-          ShortCut = 16474
-        end      
-        item
-          Command = 602
-          ShortCut = 24666
-        end      
-        item
-          Command = 301
-          ShortCut = 16432
-        end      
-        item
-          Command = 302
-          ShortCut = 16433
-        end      
-        item
-          Command = 303
-          ShortCut = 16434
-        end      
-        item
-          Command = 304
-          ShortCut = 16435
-        end      
-        item
-          Command = 305
-          ShortCut = 16436
-        end      
-        item
-          Command = 306
-          ShortCut = 16437
-        end      
-        item
-          Command = 307
-          ShortCut = 16438
-        end      
-        item
-          Command = 308
-          ShortCut = 16439
-        end      
-        item
-          Command = 309
-          ShortCut = 16440
-        end      
-        item
-          Command = 310
-          ShortCut = 16441
-        end      
-        item
-          Command = 351
-          ShortCut = 24624
-        end      
-        item
-          Command = 352
-          ShortCut = 24625
-        end      
-        item
-          Command = 353
-          ShortCut = 24626
-        end      
-        item
-          Command = 354
-          ShortCut = 24627
-        end      
-        item
-          Command = 355
-          ShortCut = 24628
-        end      
-        item
-          Command = 356
-          ShortCut = 24629
-        end      
-        item
-          Command = 357
-          ShortCut = 24630
-        end      
-        item
-          Command = 358
-          ShortCut = 24631
-        end      
-        item
-          Command = 359
-          ShortCut = 24632
-        end      
-        item
-          Command = 360
-          ShortCut = 24633
-        end      
-        item
-          Command = 231
-          ShortCut = 24654
-        end      
-        item
-          Command = 232
-          ShortCut = 24643
-        end      
-        item
-          Command = 233
-          ShortCut = 24652
-        end      
-        item
-          Command = 612
-          ShortCut = 9
-        end      
-        item
-          Command = 613
-          ShortCut = 8201
-        end      
-        item
-          Command = 250
-          ShortCut = 24642
-        end>
-      Lines.Strings = (
-        'TextSynedit'
-      )
-      SelectedColor.OnChange = nil
-      Cursor = 65532
-      Height = 53
-      Width = 393
+    object StringGrid1: TStringGrid
+      Anchors = [akTop, akLeft, akRight, akBottom]
+      BorderSpacing.Around = 6
+      ColCount = 17
+      DefaultColWidth = 16
+      FixedColor = clBtnFace
+      GridLineWidth = 0
+      Options = [goFixedVertLine, goFixedHorzLine, goVertLine, goHorzLine, goSmoothScroll]
+      RowCount = 15
+      ScrollBars = ssAutoBoth
+      VisibleColCount = 16
+      VisibleRowCount = 14
+      OnMouseDown = StringGrid1MouseDown
+      OnMouseMove = StringGrid1MouseMove
+      Left = 6
+      Height = 304
+      Top = 6
+      Width = 329
     end
   end
 end
