fixes for fpc 2.0.3 and TrayIconLaz.lpk
 SVN 8545@trunk

--- a/components/trayicon/examples/frmtest.lfm
+++ b/components/trayicon/examples/frmtest.lfm
@@ -16,19 +16,29 @@ object Form1: TForm1
     Caption = 'Show'
     OnClick = Button1Click
     TabOrder = 0
-    Left = 75
-    Height = 25
+    Left = 56
+    Height = 33
     Top = 56
-    Width = 75
+    Width = 94
   end
   object Button2: TButton
     BorderSpacing.InnerBorder = 2
     Caption = 'Hide'
     OnClick = Button2Click
     TabOrder = 1
-    Left = 75
-    Height = 25
-    Top = 95
-    Width = 75
+    Left = 56
+    Height = 33
+    Top = 112
+    Width = 94
+  end
+  object Button3: TButton
+    BorderSpacing.InnerBorder = 2
+    Caption = 'Paint Test'
+    OnClick = Button3Click
+    TabOrder = 2
+    Left = 224
+    Height = 33
+    Top = 56
+    Width = 94
   end
 end
