--- a/ide/diskdiffsdialog.lfm
+++ b/ide/diskdiffsdialog.lfm
@@ -3,6 +3,7 @@ object DiskDiffsDlg: TDiskDiffsDlg
   Caption = 'DiskDiffsDlg'
   ClientHeight = 300
   ClientWidth = 600
+  OnClose = FormClose
   OnKeyDown = DiskDiffsDlgKeyDown
   PixelsPerInch = 112
   Position = poScreenCenter
@@ -64,7 +65,9 @@ object DiskDiffsDlg: TDiskDiffsDlg
     TabOrder = 3
     Width = 588
     BookMarkOptions.Xoffset = -18
+    BookMarkOptions.OnChange = nil
     Gutter.Visible = False
+    Gutter.OnChange = nil
     Gutter.CodeFoldingWidth = 14
     Keystrokes = <    
       item
@@ -391,6 +394,7 @@ object DiskDiffsDlg: TDiskDiffsDlg
       'DiffSynEdit'
     )
     ReadOnly = True
+    SelectedColor.OnChange = nil
     Cursor = crIBeam
     Left = 6
     Height = 159
@@ -407,5 +411,14 @@ object DiskDiffsDlg: TDiskDiffsDlg
     Height = 5
     Top = 92
     Width = 600
+  end
+  object CheckDiskChangesWithLoadingCheckBox: TCheckBox
+    Anchors = [akLeft, akBottom]
+    Caption = 'CheckDiskChangesWithLoadingCheckBox'
+    TabOrder = 4
+    Left = 10
+    Height = 24
+    Top = 267
+    Width = 263
   end
 end
